--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,10 @@
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 2em;
+  display: grid;
+  height: 100vh;
+  width: 100vw;
+  place-items: center;
 }
 
 h1 {
